--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,48 @@ Primary: #eb2f64
 Primary light: #FF3366
 Primary dark: #BA265D
 
---grey-light 1: #faf9f9
---grey-light 2: #f4f2f2
---grey-light 3: #f0eeee
---grey-light 4: #ccc
+Grey light 1: #faf9f9
+Grey light 2: #f4f2f2
+Grey light 3: #f0eeee
+Grey light 4: #ccc
 
---grey-dark 1: #333
---grey-dark 2: #777
---grey-dark 3: #999
+Grey dark 1: #333
+Grey dark 2: #777
+Grey dark 3: #999
 
 */
+.container {
+  max-width: 120rem;
+  margin: 8rem auto;
+  background-color: var(--color-grey-light-2);
+  box-shadow: var(--shadow-dark);
+  min-height: 50rem;
+}
+
+.header {
+  height: 7rem;
+  font-size: 1.4rem;
+  background-color: #fff;
+  border-bottom: var(--color-grey-light-2);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.content {
+  display: flex;
+}
+
+.sidebar {
+  background-color: var(--color-grey-dark-1);
+  flex: 0 0 18%;
+}
+
+.hotel-view {
+  background-color: orangered;
+  flex: 1 0 auto;
+}
+
 /*
 COLORS
 
@@ -22,31 +54,122 @@ Primary: #eb2f64
 Primary light: #FF3366
 Primary dark: #BA265D
 
---grey-light 1: #faf9f9
---grey-light 2: #f4f2f2
---grey-light 3: #f0eeee
---grey-light 4: #ccc
+Grey light 1: #faf9f9
+Grey light 2: #f4f2f2
+Grey light 3: #f0eeee
+Grey light 4: #ccc
 
---grey-dark 1: #333
---grey-dark 2: #777
---grey-dark 3: #999
+Grey dark 1: #333
+Grey dark 2: #777
+Grey dark 3: #999
 
 */
+.logo {
+  height: 3.5rem;
+  margin-left: 3rem;
+}
+
+.search {
+  flex: 0 0 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.search_input {
+  font-family: inherit;
+  font-size: inherit;
+  background-color: var(--color-grey-light-2);
+  border: none;
+  color: inherit;
+  padding: 0.7rem 2rem;
+  border-radius: 100px;
+  width: 90%;
+  transition: all 0.3s;
+  margin-right: -3.5rem;
+}
+.search_input::placeholder {
+  font-weight: 100;
+  color: var(--color-grey-light-4);
+}
+.search_input:focus {
+  outline: none;
+  width: 100%;
+  background-color: var(--color-grey-light-3);
+}
+.search__input:focus + .search__button {
+  background-color: var(--color-grey-light-3);
+}
+.search_button {
+  border: none;
+  background-color: var(--color-grey-light-2);
+}
+.search_button:focus {
+  outline: none;
+}
+.search_button:active {
+  transform: translateY(2px);
+}
+.search__icon {
+  height: 2rem;
+  width: 2rem;
+  fill: var(--color-grey-dark-3);
+}
+
+.user_nav {
+  display: flex;
+  align-self: stretch;
+}
+.user_nav > * {
+  padding: 0 1.3rem;
+  cursor: pointer;
+  height: 100%;
+}
+.user_nav > *:hover {
+  background-color: var(--color-grey-light-2);
+}
+.user_nav__icon-box {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.user_nav__icon {
+  height: 2.25rem;
+  width: 2.25rem;
+  fill: var(--color-grey-dark-2);
+}
+.user_nav__user-photo {
+  height: 3.75rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+.user_nav__notification {
+  font-size: 0.8rem;
+  height: 1.75rem;
+  width: 1.75rem;
+  border-radius: 50%;
+  background-color: var(--color-primary);
+  color: #fff;
+  position: absolute;
+  top: 1.5rem;
+  right: 0.7rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 :root {
   /*variables will be available to child elemetns*/
   /*like html but with higher specificity*/
   --color-primary: #eb2f64;
   --color-primary-light: #FF3366;
   --color-primary-dark: #BA265D;
-  
-  --grey-light-1: #faf9f9;
-  --grey-light-2: #f4f2f2;
-  --grey-light-3: #f0eeee;
-  --grey-light-4: #ccc;
-  --grey-dark-1: #333;
-  --grey-dark-2: #777;
-  --grey-dark-3: #999;
-
+  --color-grey-light-1: #faf9f9;
+  --color-grey-light-2: #f4f2f2;
+  --color-grey-light-3: #f0eeee;
+  --color-grey-light-4: #ccc;
+  --color-grey-dark-1: #333;
+  --color-grey-dark-2: #777;
+  --color-grey-dark-3: #999;
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
 }
 
 * {
@@ -61,17 +184,15 @@ Primary dark: #BA265D
 html {
   box-sizing: border-box;
   font-size: 62.5%;
-  /*min-height: 100%;*/
 }
 
 body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   line-height: 1.6;
-  background-image: linear-gradient(to right, red , blue);
-  background-size: cover;
+  background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
   min-height: 100vh;
-  color: var(--grey-dark-2);
+  color: var(--color-grey-dark-2);
 }
 
 /*
@@ -81,14 +202,14 @@ Primary: #eb2f64
 Primary light: #FF3366
 Primary dark: #BA265D
 
---grey-light 1: #faf9f9
---grey-light 2: #f4f2f2
---grey-light 3: #f0eeee
---grey-light 4: #ccc
+Grey light 1: #faf9f9
+Grey light 2: #f4f2f2
+Grey light 3: #f0eeee
+Grey light 4: #ccc
 
---grey-dark 1: #333
---grey-dark 2: #777
---grey-dark 3: #999
+Grey dark 1: #333
+Grey dark 2: #777
+Grey dark 3: #999
 
 */
 
