--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -5,6 +5,16 @@
     --color-primary: #eb2f64;
     --color-primary-light: #FF3366;
     --color-primary-dark: #BA265D;
+    
+    --color-grey-light-1: #faf9f9;
+    --color-grey-light-2: #f4f2f2;
+    --color-grey-light-3: #f0eeee;
+    --color-grey-light-4: #ccc;
+
+    --color-grey-dark-1: #333;
+    --color-grey-dark-2: #777;
+    --color-grey-dark-3: #999;
+    --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
 }
 
  * 
@@ -32,4 +42,6 @@
     font-weight: 400;
     line-height: 1.6;
     background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
+    min-height: 100vh;
+    color: var(--color-grey-dark-2);
  }
