--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -15,3 +15,135 @@ Grey dark 2: #777
 Grey dark 3: #999
 
 */
+.logo 
+{
+    height: 3.5rem;
+    margin-left: 3rem;
+    
+}
+
+.search {
+
+    flex: 0 0 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    &_input 
+    {
+        font-family: inherit;
+        font-size: inherit;
+        background-color: var(--color-grey-light-2);
+        border: none;
+        color: inherit;
+        padding: .7rem 2rem ;
+        border-radius: 100px;
+        width: 90%;
+        transition: all .3s;
+        margin-right: -3.5rem;
+        &::placeholder
+        {
+            font-weight: 100;
+        
+            color: var(--color-grey-light-4);
+        }
+        &:focus 
+        {
+            outline: none;
+            width: 100%;
+            background-color: var(--color-grey-light-3);
+
+        }
+    }
+
+    &__input:focus + &__button
+    {
+        background-color: var(--color-grey-light-3);
+
+    }
+    &_button 
+    {
+        border: none;
+        background-color: var(--color-grey-light-2);
+        &:focus 
+        {
+            outline: none;
+        }
+
+        &:active {
+            transform: translateY(2px);
+        }
+
+    }
+
+    &__icon 
+    {
+        height: 2rem;
+        width: 2rem;
+        fill: var(--color-grey-dark-3);
+
+    }
+}
+
+
+.user_nav 
+{
+    display: flex;
+    align-self: stretch;
+   
+
+    & > * 
+    {
+        padding: 0 1.3rem;
+        cursor: pointer;
+        height: 100%;
+    }
+
+    & > *:hover
+    {
+        background-color: var(--color-grey-light-2);
+    }
+
+    &__icon-box
+    {
+        display: flex;
+        align-items: center;
+        position: relative;
+    }
+    &__icon
+    {
+        height: 2.25rem;
+        width: 2.25rem;
+        fill: var(--color-grey-dark-2);
+        
+    }
+
+    &__user-photo 
+    {
+        height: 3.75rem;
+        border-radius: 50%;
+        margin-right: 1rem;
+    }
+
+    &__notification
+    {
+        font-size: .8rem;
+        height: 1.75rem;
+        width: 1.75rem;
+        border-radius: 50%;
+        background-color: var(--color-primary);
+        color: #fff;
+        position: absolute;
+        top: 1.5rem;
+        right: .7rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    &__user-name 
+    {
+
+    }
+}
