--- a/sass/_layouts.scss
+++ b/sass/_layouts.scss
@@ -15,3 +15,38 @@ Grey dark 2: #777
 Grey dark 3: #999
 
 */
+
+.container {
+    max-width: 120rem;
+    margin: 8rem auto;
+    background-color: var(--color-grey-light-2);
+    box-shadow:var(--shadow-dark);
+    min-height: 50rem;
+}
+
+.header 
+{
+    height: 7rem;
+    font-size: 1.4rem;
+    background-color: #fff;
+    border-bottom: var(--color-grey-light-2);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.content {
+    display: flex;
+}
+
+
+.sidebar {
+    background-color: var(--color-grey-dark-1);
+    flex: 0 0 18%;
+}
+
+.hotel-view {
+    background-color: orangered;
+    flex: 1 0 auto;
+
+}
