--- a/sass/_layouts.scss
+++ b/sass/_layouts.scss
@@ -42,11 +42,15 @@ Grey dark 3: #999
 
 .sidebar {
     background-color: var(--color-grey-dark-1);
-    flex: 0 0 18%;
+    flex: 0 0 16%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .hotel-view {
     background-color: orangered;
     flex: 1 0 auto;
-
+    height: 80rem;
 }
