--- a/sass/_layouts.scss
+++ b/sass/_layouts.scss
@@ -50,7 +50,7 @@ Grey dark 3: #999
 }
 
 .hotel-view {
-    background-color: orangered;
-    flex: 1 0 auto;
+    background-color: #fff;
+    flex: 1;
     height: 80rem;
 }
