--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -303,7 +303,7 @@ Grey dark 3: #999
         margin-left: 3rem;
         align-self: stretch;
         padding: 0 2.5rem;
-        
+
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -370,3 +370,72 @@ Grey dark 3: #999
         box-shadow: none;
     }
 }
+
+
+/*--------------------DETAILS--------------------------------*/
+
+.parragraph:not(:last-of-type) 
+{
+    margin-bottom: 2rem;
+}
+
+.list 
+{
+    list-style: none;
+    margin: 3rem 0;
+    padding: 3rem;
+    border-top: 1px solid var(--color-grey-light-2);
+    border-bottom: 1px solid var(--color-grey-light-2);
+    
+    display: flex;
+    flex-wrap: wrap;
+
+    &__item 
+    {
+        flex: 0 0 50%;
+        margin-bottom: .7rem;
+    }
+
+    &__item::before 
+    {   content: "";
+        display: inline-block;
+        height: 1.5rem;
+        width: 1.5rem;
+        margin-right: .7rem;
+        
+        background-color: var(--color-primary);
+        -webkit-mask-image: url(../img/chevron-thin-right.svg);
+        -webkit-mask-size: cover;
+    }
+}
+
+.recommend
+{
+    font-size: 1.3rem;
+    display: flex;
+    color: var(--color-grey-dark-3);
+    align-items: center;
+    &__count 
+    {
+        margin-right: auto;
+
+    }
+
+    &__friends 
+    {
+
+    }
+    &__photo 
+    {   
+        box-sizing: content-box;
+        border-radius: 50%;
+        height: 4rem;
+        width: 4rem;
+        border: 3px solid #fff;
+        &:not(:last-child)
+        {
+            margin-right: -1.5rem;
+        }
+    }
+}
+
