--- a/sass/_layouts.scss
+++ b/sass/_layouts.scss
@@ -52,5 +52,29 @@ Grey dark 3: #999
 .hotel-view {
     background-color: #fff;
     flex: 1;
-    height: 80rem;
+}
+
+.detail 
+{
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-grey-light-1);
+    border-bottom: 1px solid var(--color-grey-light-2);
+}
+
+
+.description 
+{
+    font-size: 1.4rem;
+    background-color: #fff;
+    box-shadow: 0 2rem 5rem rgba(0,0,0, .15);
+    padding: 3rem;
+    flex: 0 0 60%;
+    margin-right: 4.5rem;
+}
+
+.user-reviews 
+{
+    background-color: blue;
+    flex: 0 0 40%;
 }
