--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
 COLORS
 
@@ -67,7 +68,6 @@ Grey dark 3: #999
 }
 
 .user-reviews {
-  background-color: blue;
   flex: 0 0 40%;
 }
 
@@ -309,7 +309,7 @@ Grey dark 3: #999
 .btn-inline {
   border: none;
   color: var(--color-primary);
-  font-size: inherit;
+  font-size: 1.4rem;
   border-bottom: 1px solid currentColor;
   padding-bottom: 2px;
   background-color: transparent;
@@ -317,8 +317,15 @@ Grey dark 3: #999
   transition: 0.2s;
   cursor: pointer;
 }
+.btn-inline span {
+  margin-left: 3px;
+  transition: margin-left 0.2s;
+}
 .btn-inline:hover {
   color: var(--color-grey-dark-1);
+}
+.btn-inline:hover span {
+  margin-left: 8px;
 }
 .btn-inline:focus {
   outline: none;
@@ -386,6 +393,69 @@ Grey dark 3: #999
 }
 .recommend__photo:not(:last-child) {
   margin-right: -1.5rem;
+}
+
+/*-------------REVIEWS---------------------*/
+.review {
+  font-size: 1.3rem;
+  background-color: #fff;
+  box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  position: relative;
+  overflow: hidden;
+}
+.review::before {
+  content: "“";
+  position: absolute;
+  top: -1.75rem;
+  left: -1rem;
+  font-size: 20rem;
+  color: var(--color-grey-light-2);
+  font-family: sans-serif;
+  line-height: 1;
+  z-index: 1;
+}
+.review__text {
+  margin-bottom: 2rem;
+  z-index: 10;
+  position: relative;
+}
+.review__user {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.review__photo {
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+  margin-right: 1.1rem;
+}
+.review__user-box {
+  margin-right: auto;
+}
+.review__user-name {
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 0.3rem;
+}
+.review__user-data {
+  font-size: 1rem;
+  color: var(--color-grey-dark-3);
+}
+.review__rating {
+  font-size: 2.2rem;
+  font-weight: 100;
+  color: var(--color-primary);
+}
+
+.user-reviews {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 :root {
