--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -331,7 +331,7 @@ Grey dark 3: #999
 {
     border: none;
     color: var(--color-primary);
-    font-size: inherit;
+    font-size: 1.4rem;
     border-bottom: 1px solid currentColor;
     padding-bottom: 2px;
     background-color: transparent;
@@ -339,10 +339,18 @@ Grey dark 3: #999
     transition: .2s;
     cursor: pointer;
 
-
+    & span 
+    {
+        margin-left: 3px;
+        transition: margin-left .2s;
+    }
     &:hover 
     {
         color: var(--color-grey-dark-1);
+        span 
+        {
+            margin-left: 8px;
+        }
     }
 
     &:focus 
@@ -439,3 +447,86 @@ Grey dark 3: #999
     }
 }
 
+
+/*-------------REVIEWS---------------------*/
+.review 
+{
+    font-size: 1.3rem;
+    background-color: #fff;
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, .25);
+    padding: 3rem;
+    margin-bottom: 3.5rem;
+    position: relative;
+    overflow: hidden;
+    
+    &::before 
+    {
+        content: "\201C";
+        position: absolute;
+        top: -1.75rem;
+        left: -1rem;
+        font-size: 20rem;
+        color: var(--color-grey-light-2);
+        font-family: sans-serif;
+        line-height: 1;
+        z-index: 1;
+    }
+    &__text
+    {
+        margin-bottom: 2rem;
+        z-index: 10;
+        position: relative;
+    }
+
+    &__user 
+    {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+    &__photo 
+    {
+        height: 4rem;
+        width: 4rem;
+        border-radius: 50%;
+        margin-right: 1.1rem;
+        
+    }
+    
+    &__user-box
+    {
+        margin-right: auto;
+    }
+    
+    &__user-name 
+    {
+        font-size: 1.1rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        margin-bottom: .3rem;
+    }
+    
+    &__user-data
+     {
+         font-size: 1rem;
+         color: var(--color-grey-dark-3);
+     }
+    
+    &__rating 
+    {
+        font-size: 2.2rem;
+        font-weight: 100;
+        color: var(--color-primary);
+    }
+}
+
+.user-reviews 
+{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
