--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,60 @@ Grey dark 3: #999
   align-items: center;
 }
 
+/*--------------CALL TO ACTION -------------*/
+.cta {
+  padding: 3.5rem 0;
+  text-align: center;
+}
+.cta__book-now {
+  text-transform: uppercase;
+  margin-bottom: 2.5rem;
+  font-weight: 300;
+  font-size: 2rem;
+}
+
+.btn {
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 1.5rem;
+  border: none;
+  border-radius: 100px;
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+.btn > * {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  transition: all 0.2s;
+}
+.btn__visible {
+  padding: 2rem 7.5rem;
+}
+.btn__invisible {
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  top: -100%;
+  padding: 2rem 0;
+}
+.btn:hover {
+  background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+}
+.btn:hover .btn__visible {
+  transform: translateY(100%);
+}
+.btn:hover .btn__invisible {
+  top: 0;
+}
+.btn:focus {
+  outline: none;
+  animation: pulsate 1s infinite;
+}
+
 :root {
   /*variables will be available to child elemetns*/
   /*like html but with higher specificity*/
