--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -530,3 +530,75 @@ Grey dark 3: #999
     align-items: center;
 
 }
+
+/*--------------CALL TO ACTION -------------*/
+.cta 
+{
+    padding: 3.5rem 0;
+    text-align: center;
+
+    &__book-now 
+    {
+        text-transform: uppercase;
+        margin-bottom: 2.5rem;
+        font-weight: 300;
+        font-size: 2rem;
+    }
+}
+
+.btn 
+{
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 1.5rem;
+    border: none;
+    border-radius: 100px;
+    background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+   
+    & > * 
+    {
+      display: inline-block;          
+      width: 100%;
+      height: 100%;
+      transition: all .2s;
+    }
+    &__visible 
+    {
+        padding: 2rem 7.5rem;
+    }
+
+    &__invisible 
+    {
+
+        display: inline-block;
+        position: absolute;
+        left: 0;
+        top: -100%;
+        padding: 2rem 0;
+
+        
+    }
+    &:hover 
+    {
+        background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+    }
+
+    &:hover &__visible
+    {
+        transform: translateY(100%);
+
+    }
+    &:hover &__invisible 
+    {
+        top: 0;
+    }
+    &:focus 
+    {
+        outline: none;
+        animation: pulsate 1s infinite;
+    }
+}
