--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,57 @@
 @charset "UTF-8";
+/*media queries*/
+:root {
+  /*variables will be available to child elemetns*/
+  /*like html but with higher specificity*/
+  --color-primary: #eb2f64;
+  --color-primary-light: #FF3366;
+  --color-primary-dark: #BA265D;
+  --color-grey-light-1: #faf9f9;
+  --color-grey-light-2: #f4f2f2;
+  --color-grey-light-3: #f0eeee;
+  --color-grey-light-4: #ccc;
+  --color-grey-dark-1: #333;
+  --color-grey-dark-2: #777;
+  --color-grey-dark-3: #999;
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
+}
+
+/*----variables---------*/
+* {
+  margin: 0;
+  padding: 0;
+}
+
+*, *::after, *::before {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+@media only screen and (max-width: 71.8em) {
+  html {
+    font-size: 50%;
+  }
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  line-height: 1.6;
+  background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
+  min-height: 100vh;
+  color: var(--color-grey-dark-2);
+}
+@media only screen and (max-width: 75em) {
+  body {
+    background-color: black;
+    background-image: none;
+    background-size: cover;
+  }
+}
+
 /*
 COLORS
 
@@ -23,6 +76,20 @@ Grey dark 3: #999
   box-shadow: var(--shadow-dark);
   min-height: 50rem;
 }
+@media only screen and (max-width: 75em) {
+  .container {
+    margin: 0;
+    max-width: 100%;
+    min-height: 100vh;
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 36.75em) {
+  .container {
+    flex-direction: column;
+    padding: 0;
+  }
+}
 
 .header {
   height: 7rem;
@@ -33,9 +100,19 @@ Grey dark 3: #999
   justify-content: space-between;
   align-items: center;
 }
+@media only screen and (max-width: 36.75em) {
+  .header {
+    padding-right: 5rem;
+  }
+}
 
 .content {
   display: flex;
+}
+@media only screen and (max-width: 68rem) {
+  .content {
+    flex-direction: column;
+  }
 }
 
 .sidebar {
@@ -57,6 +134,17 @@ Grey dark 3: #999
   background-color: var(--color-grey-light-1);
   border-bottom: 1px solid var(--color-grey-light-2);
 }
+@media only screen and (max-width: 112.5em) {
+  .detail {
+    padding: 2.8rem;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .detail {
+    flex-direction: column;
+    margin-right: auto;
+  }
+}
 
 .description {
   font-size: 1.4rem;
@@ -65,6 +153,18 @@ Grey dark 3: #999
   padding: 3rem;
   flex: 0 0 60%;
   margin-right: 4.5rem;
+}
+@media only screen and (max-width: 112.5em) {
+  .description {
+    padding: 2rem;
+    margin-right: 2.7rem;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .description {
+    margin-right: 0;
+    margin-bottom: 3rem;
+  }
 }
 
 .user-reviews {
@@ -197,6 +297,19 @@ Grey dark 3: #999
 .side_nav__item:not(:last-child) {
   margin-bottom: 0.5rem;
 }
+@media only screen and (max-width: 36.75em) {
+  .side_nav {
+    display: flex;
+    margin-top: 0;
+    justify-content: space-between;
+  }
+  .side_nav__item {
+    flex: 1;
+  }
+  .side_nav__item:not(:last-child) {
+    margin-bottom: 0;
+  }
+}
 .side_nav__item::before {
   content: "";
   position: absolute;
@@ -227,11 +340,24 @@ Grey dark 3: #999
   display: flex;
   align-items: center;
 }
+@media only screen and (max-width: 36.75em) {
+  .side_nav__link:link, .side_nav__link:visited {
+    flex-direction: column;
+    padding: 0.7rem 1.5rem;
+  }
+}
 .side_nav__icon {
   width: 1.75rem;
   height: 1.75rem;
   fill: currentColor;
   margin-right: 2rem;
+}
+@media only screen and (max-width: 36.75em) {
+  .side_nav__icon {
+    margin-right: 0;
+    width: 1.5rem;
+    height: 1.5rem;
+  }
 }
 .side_nav__notification {
   color: #fff;
@@ -242,6 +368,11 @@ Grey dark 3: #999
   text-align: center;
   padding: 2.5rem;
   color: var(--color-grey-light-4);
+}
+@media only screen and (max-width: 68rem) {
+  .legal {
+    display: none;
+  }
 }
 
 /*----------------------Hotel view--------------------*/
@@ -266,6 +397,16 @@ Grey dark 3: #999
   text-transform: uppercase;
   letter-spacing: 1px;
   padding: 1.5rem 3rem;
+}
+@media only screen and (max-width: 68rem) {
+  .overview__heading {
+    font-size: 1.5rem;
+  }
+}
+@media only screen and (max-width: 36.75em) {
+  .overview__heading {
+    padding: 0.5rem 2.5rem;
+  }
 }
 .overview__stars {
   margin-right: auto;
@@ -296,6 +437,11 @@ Grey dark 3: #999
   align-items: center;
   justify-content: center;
 }
+@media only screen and (max-width: 36.75em) {
+  .overview__rating {
+    padding: 0 1.5rem;
+  }
+}
 .overview__rating-average {
   font-size: 2.25rem;
   font-weight: 300;
@@ -304,6 +450,11 @@ Grey dark 3: #999
   font-size: 0.8rem;
   font-weight: 300;
   text-transform: uppercase;
+}
+@media only screen and (max-width: 36.75em) {
+  .overview__rating-count {
+    padding-bottom: 5px;
+  }
 }
 
 .btn-inline {
@@ -392,7 +543,7 @@ Grey dark 3: #999
   border: 3px solid #fff;
 }
 .recommend__photo:not(:last-child) {
-  margin-right: -1.5rem;
+  margin-right: -2rem;
 }
 
 /*-------------REVIEWS---------------------*/
@@ -404,6 +555,12 @@ Grey dark 3: #999
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
+}
+@media only screen and (max-width: 112.5em) {
+  .review {
+    padding: 2rem;
+    margin-bottom: 2.8rem;
+  }
 }
 .review::before {
   content: "“";
@@ -463,11 +620,21 @@ Grey dark 3: #999
   padding: 3.5rem 0;
   text-align: center;
 }
+@media only screen and (max-width: 112.5em) {
+  .cta {
+    padding: 2.5rem 0;
+  }
+}
 .cta__book-now {
   text-transform: uppercase;
   margin-bottom: 2.5rem;
   font-weight: 300;
   font-size: 2rem;
+}
+@media only screen and (max-width: 36.75em) {
+  .cta__book-now {
+    font-size: 1.8rem;
+  }
 }
 
 .btn {
@@ -510,45 +677,6 @@ Grey dark 3: #999
 .btn:focus {
   outline: none;
   animation: pulsate 1s infinite;
-}
-
-:root {
-  /*variables will be available to child elemetns*/
-  /*like html but with higher specificity*/
-  --color-primary: #eb2f64;
-  --color-primary-light: #FF3366;
-  --color-primary-dark: #BA265D;
-  --color-grey-light-1: #faf9f9;
-  --color-grey-light-2: #f4f2f2;
-  --color-grey-light-3: #f0eeee;
-  --color-grey-light-4: #ccc;
-  --color-grey-dark-1: #333;
-  --color-grey-dark-2: #777;
-  --color-grey-dark-3: #999;
-  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
-}
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
-*, *::after, *::before {
-  box-sizing: inherit;
-}
-
-html {
-  box-sizing: border-box;
-  font-size: 62.5%;
-}
-
-body {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  line-height: 1.6;
-  background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
-  min-height: 100vh;
-  color: var(--color-grey-dark-2);
 }
 
 /*
