--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,3 +1,4 @@
+@use 'mixins';
 :root 
 {
     /*variables will be available to child elemetns*/
@@ -17,6 +18,13 @@
     --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
 }
 
+/*----variables---------*/
+$bp-largest: 75em; ///1200px
+$bp-large: 71.8em; //1150px
+
+
+
+
  * 
  {
     margin: 0;
@@ -33,6 +41,11 @@
  {
      box-sizing: border-box;
      font-size: 62.5%;
+    @include mixins.respond($bp-large)
+    {
+        font-size: 50%; //8px
+
+    }
  }
 
  body 
@@ -44,4 +57,13 @@
     background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
     min-height: 100vh;
     color: var(--color-grey-dark-2);
+    @include mixins.respond($bp-largest)
+    {
+        background-color: black;
+        background-image: none;
+        background-size: cover;
+
+    }
+
+
  }
